<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/item_ssid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/SSID"
        />
    <TextView
        android:id="@+id/item_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_ssid"
        android:text="@string/frequency"
        />
    <TextView
        android:id="@+id/item_speedlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_frequency"
        android:text="@string/speedlink"/>
    <TextView
        android:id="@+id/item_rssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_speedlink"
        android:text="@string/RSSI"/>
    <TextView
        android:id="@+id/item_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_rssi"
        android:text="@string/distance"/>

</androidx.constraintlayout.widget.ConstraintLayout>